--- a/src/styles/scss/choices.scss
+++ b/src/styles/scss/choices.scss
@@ -292,4 +292,6 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
 
 .#{$choices-selector}__placeholder { opacity: .5; }
 
+.is-hidden { display: none; }
+
 /*=====  End of Choices  ======*/
