Include "is-hidden" class in utils section of base style sheet (#279)

--- a/src/styles/scss/base.scss
+++ b/src/styles/scss/base.scss
@@ -121,5 +121,6 @@ h6, .h6 { font-size: $global-font-size-h6; }
 .zero-bottom {  margin-bottom: 0; }
 .zero-top {  margin-top: 0; }
 .text-center { text-align: center; }
+.is-hidden { display: none; }
 
 /*=====  End of Section comment block  ======*/
