--- a/src/styles/css/choices.css
+++ b/src/styles/css/choices.css
@@ -356,6 +356,7 @@
   opacity: .5;
 }
 
+.choices__input.is-hidden,
 .choices[data-type*="select-one"] .choices__input.is-hidden,
 .choices[data-type*="select-multiple"] .choices__input.is-hidden {
   display: none;
