--- a/src/styles/choices.scss
+++ b/src/styles/choices.scss
@@ -10,11 +10,11 @@ $choices-guttering: 24px !default;
 $choices-border-radius: 2.5px !default;
 $choices-border-radius-item: 20px !default;
 $choices-bg-color: #f9f9f9 !default;
-$choices-bg-color-disabled: #EAEAEA !default;
-$choices-bg-color-dropdown: #FFFFFF !default;
+$choices-bg-color-disabled: #eaeaea !default;
+$choices-bg-color-dropdown: #ffffff !default;
 $choices-text-color: #333333 !default;
-$choices-keyline-color: #DDDDDD !default;
-$choices-primary-color: #00BCD4 !default;
+$choices-keyline-color: #dddddd !default;
+$choices-primary-color: #00bcd4 !default;
 $choices-disabled-color: #eaeaea !default;
 $choices-highlight-color: $choices-primary-color !default;
 $choices-button-dimension: 8px !default;
@@ -45,7 +45,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
   }
 }
 
-.#{$choices-selector}[data-type*="select-one"] {
+.#{$choices-selector}[data-type*='select-one'] {
   cursor: pointer;
   .#{$choices-selector}__inner {
     padding-bottom: 7.5px;
@@ -55,7 +55,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     width: 100%;
     padding: 10px;
     border-bottom: 1px solid $choices-keyline-color;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     margin: 0;
   }
   .#{$choices-selector}__button {
@@ -70,7 +70,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     height: 20px;
     width: 20px;
     border-radius: 10em;
-    opacity: .5;
+    opacity: 0.5;
     &:hover,
     &:focus {
       opacity: 1;
@@ -80,7 +80,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     }
   }
   &:after {
-    content: "";
+    content: '';
     height: 0;
     width: 0;
     border-style: solid;
@@ -96,7 +96,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     border-color: transparent transparent $choices-text-color transparent;
     margin-top: -7.5px;
   }
-  &[dir="rtl"] {
+  &[dir='rtl'] {
     &:after {
       left: 11.5px;
       right: auto;
@@ -110,8 +110,8 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
   }
 }
 
-.#{$choices-selector}[data-type*="select-multiple"],
-.#{$choices-selector}[data-type*="text"] {
+.#{$choices-selector}[data-type*='select-multiple'],
+.#{$choices-selector}[data-type*='text'] {
   .#{$choices-selector}__inner {
     cursor: text;
   }
@@ -122,13 +122,13 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     margin-right: -$choices-button-offset/2;
     margin-bottom: 0;
     margin-left: $choices-button-offset;
-    padding-left: $choices-button-offset*2;
+    padding-left: $choices-button-offset * 2;
     border-left: 1px solid darken($choices-primary-color, 10%);
     background-image: $choices-icon-cross;
     background-size: $choices-button-dimension;
     width: $choices-button-dimension;
     line-height: 1;
-    opacity: .75;
+    opacity: 0.75;
     border-radius: 0;
     &:hover,
     &:focus {
@@ -170,7 +170,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
   display: inline-block;
   padding: 4px 16px 4px 4px;
   width: 100%;
-  [dir="rtl"] & {
+  [dir='rtl'] & {
     padding-right: 4px;
     padding-left: 16px;
   }
@@ -192,12 +192,12 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     margin-bottom: 3.75px;
     background-color: $choices-primary-color;
     border: 1px solid darken($choices-primary-color, 5%);
-    color: #FFFFFF;
+    color: #ffffff;
     word-break: break-all;
     &[data-deletable] {
       padding-right: 5px;
     }
-    [dir="rtl"] & {
+    [dir='rtl'] & {
       margin-right: 0;
       margin-left: 3.75px;
     }
@@ -236,7 +236,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     bottom: 100%;
     margin-top: 0;
     margin-bottom: -1px;
-    border-radius: .25rem .25rem 0 0;
+    border-radius: 0.25rem 0.25rem 0 0;
   }
   .#{$choices-selector}__list {
     position: relative;
@@ -249,7 +249,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     position: relative;
     padding: 10px;
     font-size: $choices-font-size-md;
-    [dir="rtl"] & {
+    [dir='rtl'] & {
       text-align: right;
     }
   }
@@ -265,7 +265,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
         top: 50%;
         transform: translateY(-50%);
       }
-      [dir="rtl"] & {
+      [dir='rtl'] & {
         text-align: right;
         padding-left: 100px;
         padding-right: 10px;
@@ -276,9 +276,9 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
       }
     }
     &.is-highlighted {
-      background-color: mix(#000000, #FFFFFF, 5%);
+      background-color: mix(#000000, #ffffff, 5%);
       &:after {
-        opacity: .5;
+        opacity: 0.5;
       }
     }
   }
@@ -295,7 +295,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
 .#{$choices-selector}__item--disabled {
   cursor: not-allowed;
   user-select: none;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .#{$choices-selector}__heading {
@@ -333,19 +333,21 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
   &:focus {
     outline: 0;
   }
-  [dir="rtl"] & {
+  [dir='rtl'] & {
     padding-right: 2px;
     padding-left: 0;
   }
 }
 
 .#{$choices-selector}__placeholder {
-  opacity: .5;
+  opacity: 0.5;
 }
 
-.#{$choices-selector}__input.is-hidden,
-.#{$choices-selector}[data-type*="select-one"] .#{$choices-selector}__input.is-hidden,
-.#{$choices-selector}[data-type*="select-multiple"] .#{$choices-selector}__input.is-hidden {
+.#{$choices-selector}__input[hidden],
+.#{$choices-selector}[data-type*='select-one']
+  .#{$choices-selector}__input[hidden],
+.#{$choices-selector}[data-type*='select-multiple']
+  .#{$choices-selector}__input[hidden] {
   display: none;
 }
 
