--- a/src/styles/choices.scss
+++ b/src/styles/choices.scss
@@ -152,6 +152,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
   font-size: $choices-font-size-md;
   min-height: 44px;
   overflow: hidden;
+  box-sizing: border-box;
   .is-focused &,
   .is-open & {
     border-color: darken($choices-keyline-color, 15%);
