--- a/public/assets/styles/choices.css
+++ b/public/assets/styles/choices.css
@@ -3,6 +3,7 @@
 ===============================*/
 .choices {
   position: relative;
+  overflow: hidden;
   margin-bottom: 24px;
   font-size: 16px;
 }
@@ -13,6 +14,10 @@
 
 .choices:last-child {
   margin-bottom: 0;
+}
+
+.choices.is-open {
+  overflow: initial;
 }
 
 .choices.is-disabled .choices__inner,
